plugins {
    id "java"
    id "application"
}

mainClassName = "io.github.syst3ms.skriptparser.Parser"

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation "org.jetbrains:annotations:15.0"
    implementation group: "com.google.code.findbugs", name: "jsr305", version: "3.0.2"
    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.4.1"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.4.1"
    testImplementation "junit:junit:4.12"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.1"
}

jar {
    manifest {
        attributes("Main-Class": mainClassName,
                "Implementation-Title": "skript-parser",
                "Implementation-Version": "alpha")
    }
}